# nanokv

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  parse_perf_reports.py  run_bench_suite.sh  run_benchmark.sh
.github/workflows/: ci.yml  coverage.yml  lint.yml  perf-smoke.yml  test.yml
bench/: bench_coord_put_get.js  run_benchmark.sh
bench/perf/: perf_latency_64mb.json  perf_put_128_vus.json
common/: Cargo.toml
common/src/: api_error.rs  file_utils.rs  lib.rs  schemas.rs  time_utils.rs  unit_tests.rs  url_utils.rs
coord/: Cargo.toml
coord/src/: cleanup.rs  debug.rs  health.rs  lib.rs  main.rs  meta.rs  node.rs  op.rs  placement.rs  routes.rs  state.rs  verify.rs
coord/src/command/: common.rs  gc.rs  mod.rs  rebalance.rs  rebuild.rs  repair.rs  serve.rs  verify.rs
coord/src/core/: debug.rs  node.rs  op.rs  placement.rs  routes.rs
coord/tests/: advanced_tests.rs  delete_fanout.rs  delete_idempotent.rs  fault_injection_example.rs  get_any_replica.rs  integration_tests.rs  join_and_nodes.rs  large_object.rs  no_abort_after_commit.rs  node_down_during_write.rs  partial_commit_deadline.rs  placement.rs  pull_checksum_mismatch.rs  replication_happy.rs  retry_backoff_observable.rs  retry_commit.rs  retry_prepare.rs  retry_pull.rs  util.rs
coord/tests/common/: mod.rs
opentelemetry/: TRACING.md  tracing.env.example
perf/: perf_latency_16mb.json  perf_latency_1mb.json  perf_latency_4mb.json  perf_put_16_vus.json  perf_put_64_vus.json
scripts/: serve.sh  smoke_test.sh  verify.sh
src/: cleanup.rs  cluster.rs  constants.rs  error.rs  file_utils.rs  kvdb.rs  lib.rs  main.rs  meta.rs  placement.rs  routes.rs  state.rs  verify.rs
src/common/: Cargo.toml
src/common/src/: api_error.rs  constants.rs  error.rs  file_utils.rs  key_utils.rs  lib.rs  schemas.rs  telemetry.rs  trace_middleware.rs  trace_test.rs  url_utils.rs
src/common/tests/: unit_tests.rs
src/coord/: Cargo.toml
src/coord/src/: lib.rs  main.rs
src/coord/src/command/: common.rs  gc.rs  mod.rs  rebalance.rs  rebuild.rs  repair.rs  serve.rs  verify.rs
src/coord/src/core/: debug.rs  health.rs  meta.rs  mod.rs  node.rs  op.rs  placement.rs  routes.rs  state.rs
src/coord/tests/: delete_fanout.rs  delete_idempotent.rs  fault_injection_example.rs  get_any_replica.rs  io_happy_path.rs  join_and_nodes.rs  large_object.rs  no_abort_after_commit.rs  node_down.rs  node_down_during_write.rs  partial_commit_deadline.rs  placement.rs  pull_checksum_mismatch.rs  replication_happy.rs  retry_backoff_observable.rs  retry_commit.rs  retry_prepare.rs  retry_pull.rs  test_gc.rs  test_rebuild.rs  test_repair.rs  test_verify.rs  util.rs  write_once.rs
src/coord/tests/common/: mod.rs
src/volume/: Cargo.toml
src/volume/src/: fault_injection.rs  health.rs  lib.rs  main.rs  replicate.rs  routes.rs  state.rs  store.rs
tests/: advanced_tests.rs  integration_tests.rs  io_happy_path.rs  join_and_nodes.rs  node_down.rs  placement.rs  unit_tests.rs  write_once.rs
tests/common/: mod.rs
volume/: Cargo.toml
volume/src/: fault_injection.rs  health.rs  lib.rs  main.rs  routes.rs  state.rs
