[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
blake3 = "1.8.2"
bytes = "1.10.1"
futures-util = "0.3.31"
percent-encoding = "2.3.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
time = "0.3.41"
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }