[package]
name = "coord"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coord"
path = "src/main.rs"

[lib]
name = "coord"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
common = { path = "../common" }
axum = { version = "0.8.4", features = ["macros"] }
axum-server = "0.7.2"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4.5.46", features = ["derive"] }
futures-util = "0.3.31"
percent-encoding = "2.3.2"
rocksdb = { version = "0.24.0", default-features = false, features = ["zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2", "json"] }


[[test]]
name = "join_and_nodes"
path = "../tests/join_and_nodes.rs"

[[test]]
name = "placement"
path = "../tests/placement.rs"

[[test]]
name = "io_happy_path"
path = "../tests/io_happy_path.rs"

[[test]]
name = "write_once"
path = "../tests/write_once.rs"

[[test]]
name = "node_down"
path = "../tests/node_down.rs"

[[test]]
name = "delete_idempotent"
path = "../tests/delete_idempotent.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
http-body-util = "0.1"
tower = "0.5"
hyper = "1.0"
hyper-util = "0.1"
tokio-stream = "0.1"
volume = { path = "../volume" }
